# ClaudeStudio

./: .gitignore  .swiftlint.yml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ClaudeStudio_BuildLoop.md  ClaudeStudio_Konzept.md  LICENSE  README.md  SECURITY.md  claude-progress.txt  feature_list.json  init.sh
.claude/commands/: init-build.md  next-feature.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
app/: Package.swift  README.md  project.yml
app/ClaudeStudio.xcodeproj/: project.pbxproj
app/Resources/: AppIcon.icns
app/Resources/Assets.xcassets/: Contents.json
app/Sources/ClaudeStudio/: ClaudeStudioApp.swift
app/Sources/ClaudeStudioKit/: CoreClient.swift  IpcClient.swift  IpcProtocol.swift  MessagePack.swift  SlashCommand.swift
app/Tests/ClaudeStudioKitTests/: CoreBridgeTests.swift  MessagePackTests.swift  SlashCommandTests.swift
assets/: generate_brand.py
core/: Cargo.toml  README.md  deny.toml  rust-toolchain.toml
core/.cargo/: config.toml
core/crates/cs-agentic-os/: Cargo.toml
core/crates/cs-agentic-os/src/: lib.rs
core/crates/cs-claude/: Cargo.toml
core/crates/cs-claude/src/: lib.rs
core/crates/cs-cli/: Cargo.toml
core/crates/cs-cli/src/: embedding.rs  main.rs  mcp_server.rs  router.rs
core/crates/cs-config/: Cargo.toml
core/crates/cs-config/src/: budget.rs  lib.rs  memory.rs
core/crates/cs-git/: Cargo.toml
core/crates/cs-git/src/: lib.rs
core/crates/cs-hooks/: Cargo.toml
core/crates/cs-hooks/src/: lib.rs
core/crates/cs-ipc/: Cargo.toml
core/crates/cs-ipc/src/: envelope.rs  lib.rs
core/crates/cs-mcp/: Cargo.toml
core/crates/cs-mcp/src/: lib.rs
core/crates/cs-otel/: Cargo.toml
core/crates/cs-otel/src/: lib.rs
core/crates/cs-sessions/: Cargo.toml
core/crates/cs-sessions/src/: lib.rs
core/crates/cs-ssh/: Cargo.toml
core/crates/cs-ssh/src/: lib.rs
core/crates/cs-types/: Cargo.toml
core/crates/cs-types/src/: lib.rs
core/crates/cs-vector/: Cargo.toml
core/crates/cs-vector/examples/: embed_cli.rs  semantic_demo.rs
core/crates/cs-vector/src/: lib.rs  neural.rs
definitions/: README.md
definitions/code-standards/: error-handling.def.md  typescript-strict.def.md
definitions/loading-systems/: image-lazy-loading.def.md  video-frame-loading.def.md
definitions/performance/: bundle-optimization.def.md
definitions/ui-design/: color-token-system.def.md
docs/: README.md  agentic-os.md  agents.md  brain-view.md  context-system.md  faq.md  getting-started.md  memory-and-vector.md  roadmap.md  run-without-xcode.md  security.md  tasks-and-definitions.md  voice.md
scripts/: dev.sh  package.sh
tasks/: README.md
tasks/code-quality/: dead-code-detector.task.json  dependency-cve-audit.task.json  security-scan-owasp.task.json  test-coverage-report.task.json
tasks/compliance/: agb-impressum-checker.task.json  dsgvo-audit.task.json  eu-ai-act-readiness.task.json  kleinunternehmer-check.task.json  reverse-charge-eu-b2b.task.json
tasks/deployment/: pre-deploy-checklist.task.json  release-notes.task.json
tasks/docs/: api-docs-openapi.task.json  changelog-generator.task.json  readme-generator.task.json
tasks/schema/: task.schema.json
test-harness/: README.md  run-test.sh
test-harness/evidence/F004/: SUMMARY.txt
test-harness/evidence/F016/: kpi-ocr.json
test-harness/evidence/F017/: chart-points.json
test-harness/evidence/F018/: sort-order.json
test-harness/evidence/F019/: density-pitch.json
test-harness/evidence/F020/: filter-count.json
test-harness/evidence/F021/: grid-columns.json
test-harness/evidence/F022/: card-shadow.json
test-harness/evidence/F023/: card-reorder-persist.json
test-harness/evidence/F024/: theme-persist.json
test-harness/evidence/F025/: status-colors.json
test-harness/evidence/F026/: sidebar-width.json
test-harness/evidence/F027/: sidebar-nav.json
test-harness/evidence/F028/: project-tabs.json
test-harness/evidence/F029/: tab-retention.json
test-harness/evidence/F030/: mic-states.json
test-harness/evidence/F031/: trust-indicator.json
test-harness/evidence/F032/: definitions-collapse.json
test-harness/evidence/F033/: shortcut-overlay.json
test-harness/evidence/F043/: card-open.json  resolved.txt
test-harness/evidence/F052/: no-indicator-method.json  status-indicators.json
test-harness/evidence/F054/: quick-actions.json  result.json
test-harness/evidence/F055/: attach-payload.json  drag-attach.json
test-harness/evidence/F057/: file-preview.json  no-preview-method.json
test-harness/evidence/F062/: live-watch.json  no-watcher-method.json
test-harness/evidence/F063/: cross-project.json  no-multiroot-method.json
test-harness/evidence/F068/: blocked.json  worktree-status.json
test-harness/evidence/F079/: global-claudemd.json  global-editor-edit.json
test-harness/evidence/F085/: fastapi-claudemd.json  no-framework-templates.json
test-harness/evidence/F086/: agents-md.json  no-agents-frontmatter-editor.json
test-harness/evidence/F090/: insight.json  no-insight-hook.json
test-harness/evidence/F110/: worktree-isolation.json
test-harness/evidence/F116/: post-run-commit.json
test-harness/evidence/F117/: live-stream.json
test-harness/evidence/F118/: stop-kill.json
test-harness/evidence/F120/: decompose.json
test-harness/lib/: _probe_workflow.js  cs_probe.py  github_api_mock.py  github_mcp_server.py  oww_detect.py  run_probes.py  stub_claude.sh  ttsprobe.swift  ui_capture.sh  windowid  windowid.swift
test-harness/probes/: agentic_os.py  batch1.py  batch10.py  batch11.py  batch12.py  batch13.py  batch14.py  batch15.py  batch16.py  batch17.py  batch18.py  batch19.py  batch2.py  batch20.py  batch21.py  batch22.py  batch23.py  batch24.py  batch25.py  batch27.py  batch28.py  batch29.py  batch3.py  batch30.py  batch31.py  batch32.py  batch33.py  batch34.py  batch35.py  batch36.py  batch37.py  batch38.py  batch39.py  batch4.py  batch40.py  batch41.py  batch42.py  batch43.py  batch44.py  batch45.py  (+90 more)
(+145 files in other folders)
