[workspace]
resolver = "2"
members = [
    "crates/cs-types",
    "crates/cs-config",
    "crates/cs-ipc",
    "crates/cs-sessions",
    "crates/cs-vector",
    "crates/cs-git",
    "crates/cs-agentic-os",
    "crates/cs-claude",
    "crates/cs-mcp",
    "crates/cs-hooks",
    "crates/cs-otel",
    "crates/cs-ssh",
    "crates/cs-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/vqiz/ClaudeStudio"
rust-version = "1.75"
authors = ["ClaudeStudio Contributors"]

[workspace.dependencies]
# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.3"

# --- Error handling ---
thiserror = "1"
anyhow = "1"

# --- Async runtime ---
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "process",
    "io-util",
    "net",
    "time",
    "fs",
] }

# --- Tracing / observability ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# --- Storage ---
rusqlite = { version = "0.31", features = ["bundled"] }

# --- Misc ---
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
futures = "0.3"

# --- Internal crates ---
cs-types = { path = "crates/cs-types" }
cs-config = { path = "crates/cs-config" }
cs-ipc = { path = "crates/cs-ipc" }
cs-sessions = { path = "crates/cs-sessions" }
cs-vector = { path = "crates/cs-vector" }
cs-git = { path = "crates/cs-git" }
cs-agentic-os = { path = "crates/cs-agentic-os" }
cs-claude = { path = "crates/cs-claude" }
cs-mcp = { path = "crates/cs-mcp" }
cs-hooks = { path = "crates/cs-hooks" }
cs-otel = { path = "crates/cs-otel" }
cs-ssh = { path = "crates/cs-ssh" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
