[package]
name = "cs-claude"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "ClaudeStudio Claude Code CLI process manager: spawns the claude binary, parses stream-json, routes models."

[dependencies]
cs-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
