[package]
name = "cs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "claudestudio-core: the ClaudeStudio Rust sidecar binary (Unix socket IPC server)."

[[bin]]
name = "claudestudio-core"
path = "src/main.rs"

[dependencies]
cs-types = { workspace = true }
cs-config = { workspace = true }
cs-ipc = { workspace = true }
cs-sessions = { workspace = true }
cs-agentic-os = { workspace = true }

serde_json = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
