[package]
name = "cs-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Configuration, CLAUDE.md/memory parsing, and the 6-layer context budget for ClaudeStudio."

[dependencies]
cs-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
