[package]
name = "cs-hooks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "ClaudeStudio hook engine: matchers and actions for Claude Code lifecycle hooks plus worktree events."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
