[package]
name = "cs-sessions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Permanent SQLite session archive for ClaudeStudio (transcripts, tool calls, diffs, events, FTS5 search)."

[dependencies]
cs-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
