[package]
name = "cs-vector"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Semantic memory for ClaudeStudio: deterministic embeddings + a pluggable vector store (in-memory by default, optional Qdrant backend)."

[dependencies]
cs-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# Heavy network backend — NOT in default features.
qdrant-client = { version = "1", optional = true }

[features]
default = []
qdrant = ["dep:qdrant-client"]
