[package]
name = "cs-vector"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Semantic memory for ClaudeStudio: deterministic embeddings + a pluggable vector store (in-memory by default, optional Qdrant backend)."

[dependencies]
cs-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }

# Heavy network backend — NOT in default features.
qdrant-client = { version = "1", optional = true }

# Real neural sentence-embedder (all-MiniLM-L6-v2). Pure-Rust, statically
# linked — no external dylib to bundle/sign. Runs on CPU. NOT in default
# features so the workspace always builds without it; enabled by cs-cli.
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = [
    "onig",
] }

[features]
default = []
qdrant = ["dep:qdrant-client"]
neural = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
]

# The neural demo only compiles with the model stack present, so it is skipped
# when `neural` is off (e.g. `cargo test -p cs-vector` with default features).
[[example]]
name = "semantic_demo"
required-features = ["neural"]
